--- a/apps/charts/cvshowcase-backend/values.yaml
+++ b/apps/charts/cvshowcase-backend/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: httpd #ghcr.io/bitoatt/cvshowcase-backend
-  tag: "apline"
+  tag: "alpine"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
