--- a/apps/charts/plex/templates/persistence.yaml
+++ b/apps/charts/plex/templates/persistence.yaml
@@ -25,3 +25,59 @@ spec:
     requests:
       storage: {{ .Values.persistence.media.size }}
   volumeName: {{ include "plex.fullname" . }}-media-pv
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: {{ include "plex.fullname" . }}-media-pv
+spec:
+  capacity:
+    storage: {{ .Values.persistence.media.size }}
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: {{ .Values.persistence.media.hostPath }}
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ include "plex.fullname" . }}-media-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  resources:
+    requests:
+      storage: {{ .Values.persistence.media.size }}
+  volumeName: {{ include "plex.fullname" . }}-media-pv
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: {{ include "plex.fullname" . }}-media-pv
+spec:
+  capacity:
+    storage: {{ .Values.persistence.media.size }}
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: {{ .Values.persistence.media.hostPath }}
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ include "plex.fullname" . }}-media-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  resources:
+    requests:
+      storage: {{ .Values.persistence.media.size }}
+  volumeName: {{ include "plex.fullname" . }}-media-pv
